@@ -23,22 +23,15 @@ class EntitySourceDocumentUrlProvider {
 		$sources = $sourceDefinitions->getSources();
 
 		foreach ( $sources as $source ) {
+			// NOTE: Force the unlocalized title 'Special:EntityData' even for
+			//       local pages (T263427).
+			$entityDataTitle = $this->titleFactory->makeTitle(
+				NS_MAIN,
+				'Special:EntityData',
+				'',
+				$source->getInterwikiPrefix()
+			);
 
-			if ( $source->getInterwikiPrefix() === '' ) {
-				$entityDataTitle = $this->titleFactory->makeTitle(
-					NS_SPECIAL,
-					'EntityData',
-					'',
-					$source->getInterwikiPrefix()
-				);
-			} else {
-				$entityDataTitle = $this->titleFactory->makeTitle(
-					NS_MAIN,
-					'Special:EntityData',
-					'',
-					$source->getInterwikiPrefix()
-				);
-			}
 			$documentUrls[$source->getSourceName()] = $entityDataTitle->getCanonicalURL() . '/';
 		}
 
